Retried findAndModify requests can slow log/profile into the wrong namespace

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 6.0.1, 6.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • v6.0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      A variety of callers can use AutoStatsTracker who's constructor changes the namespace state of an operation.

      However, the destructor does not restore the state. Thus a retried findAndModify can log a slow query/system.profile entry under the config.image_collection namespace.

      While this is probably a subtle yet widespread problem, this ticket aims to correct the scenario just for the config.image_collection lookup in the findAndModify code paths.

            Assignee:
            Daniel Gottlieb (Inactive)
            Reporter:
            Daniel Gottlieb (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: