SERVER-65454: Reset curop namespace after config.image_collection lookup.

(cherry picked from commit 4606b3cd56fd4ca9c5c39ebc8a0f7e0cfb790f9e)